# PR_group7

./: .gitattributes  .gitignore  CNN.py  README.md  Report.ipynb  cnn_model.keras  main.py  pyproject.toml
CNN/: CNN.py  cnn_model.keras  cnn_modelk(5, 5)l2.keras
KWS/: DTW.py  DTW_utils.py  keyword_search.py  keyword_spotting.ipynb  kws_test.ipynb  process_dataset.ipynb  submission.csv  submission_full.csv  transcription.tsv
MLP/: MLP.ipynb  MLP.py  MLP_Tensorflow.ipynb  train.py
MNIST-full/: cnn_model.h5  gt-test.tsv  gt-train.tsv
SVM/: SVM.ipynb  report.md
SVM/results/: random_search_results.csv  random_search_results20.csv
competition01/code/: CNN_3layer.py  data_loader.py  test.ipynb
competition01/submissions/: submission_cnn_simple_adam10.csv
signatures/: DTW.py  Signature_verification.ipynb  classified_signatures.csv  dissim.csv  sign_utils.py  submission.csv  submission_2.0.csv
signatures/SignatureVerification_competition/: comp_utils.py  sample-submission.csv  sign_comp.ipynb  submission.csv  submission_fixed2.0.csv  test.tsv
signatures/enrollment/: 001-g-01.tsv  001-g-02.tsv  001-g-03.tsv  001-g-04.tsv  001-g-05.tsv  002-g-01.tsv  002-g-02.tsv  002-g-03.tsv  002-g-04.tsv  002-g-05.tsv  003-g-01.tsv  003-g-02.tsv  003-g-03.tsv  003-g-04.tsv  003-g-05.tsv  004-g-01.tsv  004-g-02.tsv  004-g-03.tsv  004-g-04.tsv  004-g-05.tsv  005-g-01.tsv  005-g-02.tsv  005-g-03.tsv  005-g-04.tsv  005-g-05.tsv  006-g-01.tsv  006-g-02.tsv  006-g-03.tsv  006-g-04.tsv  006-g-05.tsv  007-g-01.tsv  007-g-02.tsv  (+118 more)
utils/: data_loader.py  legacy_model_loader.py
(+4851 files in other folders)
