[project]
name = "pr-group7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=1.23.5,<2.0.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tensorflow==2.15.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
]
