[project]
name = "pr-group7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.9",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=1.23.5,<2.0.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyts>=0.13.0",
    "regex>=2025.11.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tensorflow==2.15.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm>=4.67.1",
]
